--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.11.10",
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -21,9 +22,11 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "typescript": "4.9.5"
   }
