--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "js-cookie": "^3.0.1",
     "next": "13.1.6",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
@@ -29,5 +30,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
