--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
